# bentoml-mlflow-demo

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  bentofile.yaml  bentoml_service.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
airflow_bento_mlflow_mnist_project/: __init__.py  bentoml_service.py  main.py  mnist.py
bentoml_mlflow_demo/: __init__.py  bentoml_service.py  mnist.py  train.py  utils.py
docs/: Makefile  bentoml_mlflow_demo.rst  conf.py  index.rst  installation.rst  make.bat  modules.rst  usage.rst
tests/: __init__.py  test_airflow_bento_mlflow_mnist_project.py
