[tool.poetry]
name = "bentoml_mlflow_demo"
version = "0.1.0"
description = ""
authors = ["ekwska <ekwiecinska55@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = { version = "2.1.0+cpu", source = "torch_cpu"}
torchvision = { version = "0.16.0+cpu", source = "torch_cpu" }
bentoml = {version = "*", extras = ["io-image"]}
pip = "*"
bump2version = "*"
wheel = "*"
watchdog = "*"
Pillow = "*"
numpy = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
tox = "*"
coverage = "*"
Sphinx = "*"
twine = "*"
black = "*"
flake8 = "*"

[[tool.poetry.source]]
name = "torch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
train = "bentoml_mlflow_demo.train:main"
